# ovr-update-settings

./: CMakeLists.txt  LICENSE.txt  main.cpp  main.h  ops.cpp  ops.h  ovr-update-settings.cpp
